# oi-server

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: ci.yml
examples/: basic.py
src/oi_server/: __init__.py
tests/: test_basic.py
